Fix gas network connectivity + gas pipe shift-click readout
Root cause gas never moved: GasPipeBehavior/GasTankBehavior/GasPumpBehavior had empty or UP/DOWN-only
connectableFaces, so canConnectTo (which the GasEngine BFS uses to build the network) returned false and
every gas node came out isolated (n=1). Gas has no direction — set all three to connect on all 6 faces.
Verified live: pump -> pipe -> fan machine network forms (n=3) and nitrogen flows (pump drains, machine
fills). Also update the gas pipe shift-click to the new readout (shared gasInfo: i18n gas name + fill%,
no pressure/lift since gas has no head). Debug off.